force-app/main/default/objects/Publication__c/fields/Free_Link__c.field-meta.xml
<CustomField>
    <fullName>Free_Link__c</fullName>
    <label>Free Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>