force-app/main/default/objects/Publication__c/fields/Lead_Author__c.field-meta.xml
<CustomField>
    <fullName>Lead_Author__c</fullName>
    <label>Lead Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>