force-app/main/default/objects/Publication__c/fields/Publication_Title__c.field-meta.xml
<CustomField>
    <fullName>Publication_Title__c</fullName>
    <label>Publication Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>