force-app/main/default/objects/Publication__c/fields/Publication_Type__c.field-meta.xml
<CustomField>
    <fullName>Publication_Type__c</fullName>
    <label>Publication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstract</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Manuscript</fullName>
            </value>
            <value>
                <fullName>Oral Presentation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>Student Manuscript</fullName>
            </value>
            <value>
                <fullName>Student Paper</fullName>
            </value>
            <value>
                <fullName>Student Presentation</fullName>
            </value>
            <value>
                <fullName>Student Research Project</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>