force-app/main/default/objects/Publication__c/fields/Publication_Venue__c.field-meta.xml
<CustomField>
    <fullName>Publication_Venue__c</fullName>
    <label>Publication Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>