force-app/main/default/objects/Publication__c/fields/REGN_Contact__c.field-meta.xml
<CustomField>
    <fullName>REGN_Contact__c</fullName>
    <label>REGN Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A. Blumenfeld</fullName>
            </value>
            <value>
                <fullName>Alan R. Shuldiner</fullName>
            </value>
            <value>
                <fullName>Alan Shuldiner</fullName>
            </value>
            <value>
                <fullName>Alejandra King</fullName>
            </value>
            <value>
                <fullName>Alicia Hawes</fullName>
            </value>
            <value>
                <fullName>Andrew Marderstein</fullName>
            </value>
            <value>
                <fullName>Aris Baras</fullName>
            </value>
            <value>
                <fullName>Aris N. Economides</fullName>
            </value>
            <value>
                <fullName>Brian Cocca</fullName>
            </value>
            <value>
                <fullName>Charles Paulding</fullName>
            </value>
            <value>
                <fullName>Christopher Sprangel</fullName>
            </value>
            <value>
                <fullName>Chuan Gao</fullName>
            </value>
            <value>
                <fullName>Claudia Gonzaga-Jauregui</fullName>
            </value>
            <value>
                <fullName>Claudia Schurmann</fullName>
            </value>
            <value>
                <fullName>Colm O’Dushlaine</fullName>
            </value>
            <value>
                <fullName>Cris Van Hout</fullName>
            </value>
            <value>
                <fullName>Dadong Li</fullName>
            </value>
            <value>
                <fullName>Eli Stahl</fullName>
            </value>
            <value>
                <fullName>Eric Jorgenson</fullName>
            </value>
            <value>
                <fullName>Evan Maxwell</fullName>
            </value>
            <value>
                <fullName>Frederick Dewey</fullName>
            </value>
            <value>
                <fullName>Gannie Tzoneva</fullName>
            </value>
            <value>
                <fullName>Giovanni Coppola</fullName>
            </value>
            <value>
                <fullName>Giusy Della Gatta</fullName>
            </value>
            <value>
                <fullName>Goncalo Abecasis</fullName>
            </value>
            <value>
                <fullName>Harikirah Nistala</fullName>
            </value>
            <value>
                <fullName>Hye In Kim</fullName>
            </value>
            <value>
                <fullName>Ingrid Burecki</fullName>
            </value>
            <value>
                <fullName>Ishani Bansal</fullName>
            </value>
            <value>
                <fullName>Jan Freudenberg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>