force-app/main/default/objects/Publication__c/fields/RGC_Authorship__c.field-meta.xml
<CustomField>
    <fullName>RGC_Authorship__c</fullName>
    <label>RGC Authorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>