force-app/main/default/objects/Publication__c/fields/Therapeutic_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Focus_Area__c</fullName>
    <label>Therapeutic Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>Auditory</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Immune/Respir</fullName>
            </value>
            <value>
                <fullName>Infectious Diseases</fullName>
            </value>
            <value>
                <fullName>Muscle &amp; Metabolism</fullName>
            </value>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Rare Diseases</fullName>
            </value>
            <value>
                <fullName>Skeletal Disease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>