force-app/main/default/objects/Publication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RGC_Authorship__c</columns>
    <columns>Publication_Type__c</columns>
    <columns>Publication_Forum__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Status__c</columns>
    <columns>Publication_Date__c</columns>
    <columns>Publication_Venue__c</columns>
    <columns>Lead_Author__c</columns>
    <columns>Therapeutic_Focus_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>